# controller/api/v1/common.go
@@ -6,6 +6,7 @@ import (
 	"lil-helper-backend/pkg/e"
 	"lil-helper-backend/pkg/handler"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -14,35 +15,30 @@ import (
 // @Tags Common
 // @Summary list top score users
 // @Produce application/json
+// @Param limit query int false "top helpers limit"
 // @Success 200 {object} handler.Response{data=apimodel.JsonObjectArray}
 // @Router /helpers [get]
 func GetTopScoreHelpers(c *gin.Context) {
 	app := handler.Gin{C: c}
 
-	users := []helpermodel.User{}
-	user := helpermodel.User{}
-	users = append(users, user)
-	users = append(users, user)
-	jsonArray := apimodel.NewJsonObjectArray(users)
-	app.Response(http.StatusOK, e.SUCCESS, jsonArray)
-}
-
-// GetTopScoreUsersLimit ...
-// @Tags Common
-// @Summary list top score users with limit
-// @Produce application/json
-// @Param limit path string true "top helpers limit"
-// @Success 200 {object} handler.Response{data=apimodel.JsonObjectArray}
-// @Router /helpers/{limit} [get]
-func GetTopScoreHelpersLimit(c *gin.Context) {
-	app := handler.Gin{C: c}
-
-	// var limit int = 10
-
-	users := []helpermodel.User{}
-	user := helpermodel.User{}
-	users = append(users, user)
-	users = append(users, user)
-	jsonArray := apimodel.NewJsonObjectArray(users)
-	app.Response(http.StatusOK, e.SUCCESS, jsonArray)
+	if helpers, err := helpermodel.GetUsers(true, false, false, true); err != nil {
+		app.Response(http.StatusInternalServerError, e.ERROR, nil)
+	} else {
+		var publicHelpers []helpermodel.PublicUser
+		if limitstr, ok := c.GetQuery("limit"); ok {
+			limit, _ := strconv.Atoi(limitstr)
+			for i, u := range helpers {
+				if i >= limit {
+					break
+				}
+				publicHelpers = append(publicHelpers, u.Public())
+			}
+		} else {
+			for _, u := range helpers {
+				publicHelpers = append(publicHelpers, u.Public())
+			}
+		}
+		jsonArray := apimodel.NewJsonObjectArray(publicHelpers)
+		app.Response(http.StatusOK, e.SUCCESS, jsonArray)
+	}
 }
