# docs/swagger.json
@@ -58,6 +58,20 @@
                     "Admin"
                 ],
                 "summary": "list helpers",
+                "parameters": [
+                    {
+                        "type": "boolean",
+                        "description": "flag to query active user only (default: true)",
+                        "name": "active",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "flag to query all users (default: false)",
+                        "name": "all",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -82,11 +96,6 @@
         },
         "/admin/helpers/{uid}": {
             "delete": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -108,48 +117,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/handler.Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/admin/login": {
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Admin"
-                ],
-                "summary": "user login test",
-                "parameters": [
-                    {
-                        "description": "User login parameters",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/apiModel.UserRegistParam"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/handler.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/helpermodel.PublicUser"
-                                        }
-                                    }
-                                }
-                            ]
                         }
                     }
                 }
@@ -480,6 +447,48 @@
                 }
             }
         },
+        "/base/regist": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Base"
+                ],
+                "summary": "user registration",
+                "parameters": [
+                    {
+                        "description": "User registration parameters",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/apimodel.UserRegistParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/helpermodel.PublicUser"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/helper/mission": {
             "get": {
                 "produces": [
@@ -502,48 +511,6 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/helpermodel.Mission"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    }
-                }
-            }
-        },
-        "/helper/regist": {
-            "post": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Helper"
-                ],
-                "summary": "user registration",
-                "parameters": [
-                    {
-                        "description": "User registration parameters",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/apiModel.UserRegistParam"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/handler.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/helperModel.PublicUser"
                                         }
                                     }
                                 }
@@ -739,44 +706,12 @@
                     "Common"
                 ],
                 "summary": "list top score users",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/handler.Response"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/apimodel.JsonObjectArray"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    }
-                }
-            }
-        },
-        "/helpers/{limit}": {
-            "get": {
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Common"
-                ],
-                "summary": "list top score users with limit",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "top helpers limit",
                         "name": "limit",
-                        "in": "path",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -935,6 +870,19 @@
                 }
             }
         },
+        "apimodel.UserRegistParam": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "my_password"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "my_username"
+                }
+            }
+        },
         "handler.Response": {
             "type": "object",
             "properties": {
@@ -959,6 +907,9 @@
                 },
                 "admin": {
                     "type": "boolean"
+                },
+                "score": {
+                    "type": "integer"
                 },
                 "userUID": {
                     "type": "string"
@@ -990,10 +941,7 @@
                     "type": "string"
                 },
                 "weight": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "type": "string"
                 }
             }
         },
@@ -1005,6 +953,9 @@
                 },
                 "admin": {
                     "type": "boolean"
+                },
+                "score": {
+                    "type": "integer"
                 },
                 "userUID": {
                     "type": "string"
